--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify -- Yout favourite music is here</title>
+    <title>Clotify -- Yout favourite music is here</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/3ebb25415e.js" crossorigin="anonymous"></script>
 </head>
